Add package configuration options (not used yet)i; test code/scripts for postinstall/preremove; update TODO; add support for eclipse ShellEd plugin.

--- a/.project
+++ b/.project
@@ -13,5 +13,6 @@
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.koneki.ldt.nature</nature>
+		<nature>net.sourceforge.shelled.core.nature</nature>
 	</natures>
 </projectDescription>
