Rework feed creation scripts: they now support uploading to doodle3d.com (with corresponding changes to opkg.conf) and they are more location independent.

--- a/src/opkg.conf
+++ b/src/opkg.conf
@@ -1,5 +1,5 @@
-#src/gz wifibox http://doodle3d.com/static/wifibox-packages
-src/gz wifibox http://192.168.5.2/~wouter/wifibox-packages
+src/gz wifibox http://doodle3d.com/updates/feed
+#src/gz wifibox http://192.168.5.2/~USERNAME/wifibox/updates/feed
 dest root /
 dest ram /tmp
 lists_dir ext /var/opkg-lists
