--- a/src/script/wifibox.uci.config
+++ b/src/script/wifibox.uci.config
@@ -1,3 +1,6 @@
 config settings 'system'
         option logfile '/tmp/wifibox.log'
         option loglevel 'debug'
+
+config settings 'general'
+	option printer_type 'ultimaker'
