Add openwrt diffconfig files (referenced from online wiki); change eclipse project name to match repository name.

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>d3d-box-wifi</name>
+	<name>doodle3d-firmware</name>
 	<comment></comment>
 	<projects>
 	</projects>
