Prepare log subsystem to be consistent with changes in print3d.

--- a/src/script/wifibox.uci.config
+++ b/src/script/wifibox.uci.config
@@ -1,5 +1,8 @@
 config settings 'system'
-	option logfile '/tmp/wifibox.log'
+		#Note that using an SSH tunnel without public key auth will need interaction
+        option log_path '/tmp'
+        option api_log_filename 'wifibox.log'
+        option p3d_log_basename 'print3d' #or: '<stderr>', or: '`ssh USER@HOST "cat > /tmp/test.log"`'
 
 config settings 'general'
 	option printer_type 'ultimaker'
