change default gcode server to gcodeserver.doodle3d.com

--- a/src/script/wifibox.uci.config
+++ b/src/script/wifibox.uci.config
@@ -10,4 +10,4 @@ config settings 'system'
 
 config settings 'general'
 	option printer_type 'ultimaker'
-        option gcode_server 'tranquil-meadow-94621.herokuapp.com'
+        option gcode_server 'http://gcodeserver.doodle3d.com'
